Fixed Some Dark Mode issues

--- a/scss/products.scss
+++ b/scss/products.scss
@@ -73,7 +73,7 @@ body{
     form{
       
       .card{
-        background-color: #fff3ff;
+        border: 1px solid white;
         
         img{
           height: 450px;
